--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.1.6
   pin_code_fields: ^7.4.0
+  http: ^0.13.5
+  shared_preferences: ^2.0.16
 
 
 dev_dependencies:
