--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   flutter_svg: ^1.1.6
   pin_code_fields: ^7.4.0
   http: ^0.13.5
-  shared_preferences: ^2.0.16
+  #shared_preferences: ^2.0.16
 
 
 dev_dependencies:
